Ответы по услугам приведены к стандарту. Добавлен объект Price
