# app/Http/Requests/BusinessService/BusinessServiceCreateRequest.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Requests\BusinessService;
 
+use App\Models\Currency;
 use Illuminate\Foundation\Http\FormRequest;
 
 class BusinessServiceCreateRequest extends FormRequest
@@ -24,8 +25,8 @@ class BusinessServiceCreateRequest extends FormRequest
         return [
 			'business_id' => ['required', 'integer', 'exists:business_profiles,id'],
 			'title' => ['required', 'string', 'max:150'],
-			'price' => ['required', 'decimal:0,3', 'min:0'],
 			'currency_id' => ['required', 'integer', 'exists:currencies,id'],
+			'price' => ['required', 'decimal:0,3', 'min:0'],
 			'description' => ['string', 'max:16383', 'nullable'],
 			'duration' => ['required', 'integer', 'min:1'],
 			'is_field' => ['required', 'boolean'],
@@ -33,7 +34,7 @@ class BusinessServiceCreateRequest extends FormRequest
         ];
     }
 
-	public function prepareForValidation()
+	public function prepareForValidation(): void
 	{
 		$this->merge(['business_id' => $this->route('business_profile')]);
 	}
