# app/Http/Resources/BusinessService/BusinessServiceResource.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Resources\BusinessService;
 
+use App\Models\Currency;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
@@ -16,6 +17,17 @@ class BusinessServiceResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return [
+			'id' => $this->id,
+			'business_id' => $this->business_id,
+			'title' => $this->title,
+			'created_at' => $this->created_at,
+			'updated_at' => $this->updated_at,
+			'price' => $this->price,
+			'user_id' => $this->user_id,
+			'description' => $this->description,
+			'duration' => $this->duration,
+			'is_field' => $this->is_field
+		];
     }
 }
